--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  http: ^0.13.1
+  http: ^0.12.0
   shared_preferences: ^0.4.3
   rxdart: ^0.20.0
   bloc_pattern: ^1.3.0
@@ -54,6 +54,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - lib/images/backgroundpic.jpeg
+    - lib/images/backgroundpic2.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
