--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
   assets:
     - lib/images/backgroundpic.jpeg
     - lib/images/backgroundpic2.jpeg
+    - lib/images/backgroundpic3.jpeg
+    - lib/images/backgroundpic4.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
