--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.4.3
   rxdart: ^0.20.0
   bloc_pattern: ^1.3.0
+  path_provider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
